# digiEduHack_hackathon

./: .gitignore  .gitmodules  README.md
.github/: copilot-instructions.md
ingest_service/: Dockerfile  README.md  main.py  requirements.txt
ingest_service/modules/: __init__.py  audio_module.py  db.py  models_db.py  raw_module.py  schemas.py  survey_module.py  utils.py
srcs/agentic_analysis/: .env.example  .gitignore  Dockerfile  requirements.txt
srcs/agentic_analysis/app/: agent.py  azure_client.py  main.py  schemas.py  session_store.py  settings.py  tools.py
srcs/deployemnt/: docker-compose.yml
srcs/frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
srcs/frontend/src/: index.html  main.ts  styles.css
srcs/frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.routes.ts
srcs/frontend/src/app/core/: auth.guard.ts  (+3 more)
srcs/reverseproxy/: Dockerfile  nginx.conf
srcs/server/: CMakeLists.txt  Dockerfile-backend  Dockerfile-postgres  docker-compose.yml
srcs/server/dependencies/: CMakeLists.txt
srcs/server/dependencies/sqlpp11/: CMakeLists.txt
srcs/server/dependencies/sqlpp23/: CMakeLists.txt
srcs/server/sql/: init.sql
srcs/server/src/: CMakeLists.txt  main.cpp
srcs/server/src/controllers/: RegionController.cpp  RegionController.hpp  TestCtrl.cpp  TestCtrl.hpp  UserController.cpp  UserController.hpp
srcs/server/src/controllers/base/: BaseController.hpp
srcs/server/src/dao/: User.hpp
srcs/server/src/domain/: User.hpp
srcs/server/src/utils/: Utils.hpp
(+57 files in other folders)
